--- a/src/app/components/crud-docente/crud-docente.component.html
+++ b/src/app/components/crud-docente/crud-docente.component.html
@@ -10,10 +10,10 @@
                 <input [(ngModel)] = "filtro"  class="form-control"  id="id_txt_filtro" name="filtro" placeholder="Ingrese el nombre" type="text" maxlength="30" />
             </div>
             <div class="col-md-2">
-                <button type="button" class="btn btn-primary" id="id_btn_filtrar" style="width: 150px">Filtrar</button>
+                <button type="button" (click)="consulta()" class="btn btn-primary btn-sm" id="id_btn_filtrar" style="width: 150px">Filtrar</button>
             </div>
             <div class="col-md-2">
-                <button  type="button" data-toggle='modal' data-target="#idModalRegistrar" class='btn btn-success' style="width: 150px">Registrar</button>
+                <button  type="button" data-toggle='modal' data-target="#idModalRegistrar" class='btn btn-primary btn-sm' style="width: 150px">Registrar</button>
             </div>
         </div>
 
@@ -35,14 +35,19 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>AA</td>
-                                <td>AA</td>
-                                <td>AA</td>
-                                <td>AA</td>
-                                <td>AA</td>
-                                <td><button type="button" style="width: 90px" class="btn btn-primary btn-sm" data-toggle='modal' data-target="#exampleModalEliminar">Activo</button></td>
-                                <td><button type="button" style="width: 90px" class="btn btn-primary btn-sm"  data-toggle="modal" data-target="#idModalActualizar">Editar</button></td>
+                            <tr *ngFor="let x of docentes">
+                                <td>{{ x.idDocente }}</td>
+                                <td>{{ x.nombre }}</td>
+                                <td>{{ x.dni }}</td>
+                                <td>{{ x.estado == 1?"Activo":"Inactivo"}}</td>
+                                <td>{{ x.ubigeo!.departamento }} - {{ x.ubigeo!.provincia }} - {{ x.ubigeo!.distrito }}</td>
+                                <td>
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" id="idEstado_{{ x.idDocente }}" [checked]="x.estado==1?true:false"  name="estado"  (change)="actualizaEstado(x)" />             
+                                        <label class="custom-control-label" for="idEstado_{{ x.idDocente }}"></label>
+                                    </div>    
+                                </td>
+                                <td><button type="button" (click)="busca(x)" style="width: 90px" class="btn btn-success btn-sm"  data-toggle="modal" data-target="#idModalActualizar">Editar</button></td>
                             </tr>
                         </tbody>
                     </table>
@@ -120,10 +125,11 @@
 
                         </div> 
                         <div class="modal-footer">
+                            <button type="reset"  class="btn btn-secondary" id="btn_reg_limpiar" style="width: 100px;">Limpiar</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btn_reg_cerrar" style="width: 100px;">Close</button>
                             <div class="form-group text-center">
                                 <div class="col-lg-12">
-                                    <button id="id_reg_registra"   class="btn btn-success form-control"style="width: 100px;">Registrar</button>
+                                    <button id="id_reg_registra" (click)="registra()"  class="btn btn-success form-control"style="width: 100px;">Registrar</button>
                                 </div>
                             </div>
                         </div>
@@ -211,10 +217,11 @@
                         </div>
 
                         <div class="modal-footer">
+                            <button type="reset"  class="btn btn-secondary" id="btn_act_limpiar" style="width: 100px;">Limpiar</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btn_act_cerrar">Close</button>
                             <div class="form-group text-center">
                                 <div class="col-lg-12">
-                                    <button id="id_act_actualiza" class="btn btn-success form-control">Actualizar</button>
+                                    <button (click)="actualiza()" id="id_act_actualiza" class="btn btn-success form-control">Actualizar</button>
                                 </div>
                             </div>
                         </div>
